	* Reenabled temp file cleanup code in 'src/webhostd/upgrade.cpp'.
2016-02-25 Fred Gleason <fredg@paravelsystems.com>
	* Merged the 'WHHttpRequest' class into 'WHHttpConnection'.
2016-02-25 Fred Gleason <fredg@paravelsystems.com>
	* Removed the 'WHHttpServer::sendResponse()',
	'WHHttpServer::sendHeader()' and 'WHHttpServer::sendError()' methods
	from 'src/wh/whhttpserver.cpp' and 'src/wh/whhttpserver.h'.
2016-02-26 Fred Gleason <fredg@paravelsystems.com>
	* Implemented basic WebSocket support.
2016-02-26 Fred Gleason <fredg@paravelsystems.com>
	* Added 'WHHttpServer::newSocketConnection()' and
	'WHHttpServer::socketConnectionClosed()' signals in
	'src/wh/whhttpserver.cpp' and 'src/wh/whhttpserver.h'.
2016-02-26 Fred Gleason <fredg@paravelsystems.com>
	* Refactored the test cases into separate directories under 'test/'.
2016-02-26 Fred Gleason <fredg@paravelsystems.com>
	* Added a WebSockets test in 'src/tests/sockettest/'.
2016-02-29 Fred Gleason <fredg@paravelsystems.com>
	* Removed code to mask outgoing WebSocket frames in
	'src/wh/whhttpserver.cpp'.
2016-02-29 Fred Gleason <fredg@paravelsystems.com>
	* Added support for connection close status codes in
	'src/wh/whhttpserver.cpp', 'src/wh/whhttpserver.h',
	'src/wh/whhttpconnection.cpp' and 'src/wh/whhttpconnection.h'.
2016-02-29 Fred Gleason <fredg@paravelsystems.com>
	* Added 'docs/DEBUGGING.txt'.
2016-02-29 Fred Gleason <fredg@paravelsystems.com>
	* Fixed bugs in 'src/wh/whhttpserver.cpp' and
	'src/wh/whhttpconnection.cpp' that broke WebSocket support on
	Safari, Internet Explorer and Edge browsers.
2016-02-29 Fred Gleason <fredg@paravelsystems.com>
	* Implemented HTTP HEAD support in 'src/wh/whhttpserver.cpp',
	'src/wh/whhttpserver.h', 'src/wh/whhttpconnection.cpp' and
	'src/wh/whhttpconnection.h'.
2016-03-01 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'src/tests/sockettest/sockettest.js' that caused
	the WebSocket connection to fail when the server was not running
	on localhost.